fix : overlapping index with canvas and location button

--- a/src/index.css
+++ b/src/index.css
@@ -189,6 +189,22 @@
   display: none;
 }
 
+.leaflet-container {
+  z-index: 1;
+}
+
+.leaflet-top,
+.leaflet-bottom,
+.leaflet-control {
+  z-index: 800 !important;
+}
+
+.leaflet-control-zoom,
+.leaflet-control-zoom-in,
+.leaflet-control-zoom-out {
+  z-index: 800 !important;
+}
+
 .dark {
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
